dropshot/tests/fail/bad_trait_only21.stderr
error[E0308]: mismatched types
  --> tests/fail/bad_trait_only21.rs:12:18
   |
12 |         policy = 2 + 2,
   |                  ^^^^^ expected `EndpointTagPolicy`, found integer
